src/objects/Drip_Step__c.object
<CustomObject>
    <description>The config data for a drip campaign</description>
    <fields>
        <fullName>Campaign__c</fullName>
        <inlineHelpText>drip campaign for this drip event</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Drip Steps</relationshipLabel>
        <relationshipName>R00NR0000000Ui7SMAS</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email_Template__c</fullName>
        <inlineHelpText>Name of the email template for this step</inlineHelpText>
        <label>Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interval_Type__c</fullName>
        <label>Interval Type</label>
        <picklist>
            <picklistValues>
                <fullName>Week(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year(s)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interval_Unit__c</fullName>
        <label>Interval Unit</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Drip Step</label>
    <nameField>
        <displayFormat>DripStep-{000000}</displayFormat>
        <label>Drip Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drip Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>